[dev 33] Add CDK changes